--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -205,14 +205,42 @@ def env_tracers
   return {} if in_mpi_env? && Set[-1, mpi_rank_id].disjoint?(OPTIONS[:'traced-ranks'])
 
   h = Hash.new { |h, k| h[k] = [] }
-  backends = ['ze']
-  backends.each do |be|
-    beu = be.upcase
-    h['LD_LIBRARY_PATH'] << File.join(PKGLIBDIR, be)
-    loader = "LTTNG_UST_#{beu}_LIB#{beu}_LOADER"
-    h[loader] << whichlib64("lib#{be}_loader.so") unless env_fetches(loader)
-    h['LD_PRELOAD'] << File.join(LIBDIR, "libTracer#{beu}.so")
+  [%w[opencl cl libOpenCL libTracerOpenCL],
+   %w[ze ze libze_loader libTracerZE],
+   %w[cuda cuda libcuda libTracerCUDA],
+   %w[hip hip libamdhip64 libTracerHIP]].each do |name, bt_name, lib, libtracer|
+    # Backend ot requested
+    next unless OPTIONS[:'backend-name'].include?(bt_name)
+
+    # Find and Save the original lib path
+    libenv = "LTTNG_UST_#{name.upcase}_#{lib.upcase}"
+    if env_fetches(libenv)
+      LOGGER.debug("#{libenv} was already set, will use this path for the #{backend} loader")
+    else
+      libpath = whichlib64("#{lib}.so")
+      if libpath
+        h[libenv] = libpath
+      else
+        LOGGER.debug("No #{lib}.so found in LD_LIBRARY_PATH")
+        next
+      end
+    end
+    # Add our "stud" library to the path
+    h['LD_LIBRARY_PATH'] << File.join(PKGLIBDIR, name)
+    # Preload our own lib
+    h['LD_PRELOAD'] << File.join(LIBDIR, "#{libtracer}.so")
+    h["LTTNG_UST_#{name.upcase}_PROFILE"] = 1 if OPTIONS[:profile]
+    h["LTTNG_UST_#{name.upcase}_VERBOSE"] = 1 if LOGGER.level <= Logger::DEBUG
   end
+
+  # Customization
+  h['LTTNG_UST_ZE_PARANOID_DRIFT'] = 1 if OPTIONS[:'backend-name'].include?('ze') && OPTIONS[:profile]
+
+  if OPTIONS[:'backend-name'].include?('omp')
+    h['LTTNG_UST_OMP_INTEL'] = 1
+    h['OMP_TOOL_LIBRARIES'] = File.join(PKGLIBDIR, 'libTracerOMPT.so')
+  end
+
   LOGGER.debug(h)
   h.freeze
 end
@@ -220,11 +248,11 @@ end
 def launch_usr_bin(env, cmd)
   LOGGER.info { "Launch_usr_bin #{cmd}" }
   # Transform list to bash env
-  #   Appneding to current env if already existing
+  #   prepending to current env if already existing
   #   we don't modify `ENV` direclly to avoid by-construction any side-effect
   bash_env = env.map do |k, v|
-    v.prepend(env_fetches(k)) if env_fetches(k)
-    [k, v.join(':')]
+    v.append(env_fetches(k)) if env_fetches(k)
+    [k, [v].flatten.join(':')]
   end.to_h
 
   begin
@@ -294,6 +322,36 @@ def enable_events_ze(lttng_session_uuid, channel_name, tracing_mode: 'default', 
   end
 end
 
+def enable_events_cl(lttng_session_uuid, channel_name, tracing_mode: 'default', profiling: true)
+  lttng_enable = "lttng enable-event --userspace --session=#{lttng_session_uuid} --channel=#{channel_name}"
+  case tracing_mode
+  when 'full'
+    exec("#{lttng_enable} lttng_ust_opencl:*")
+    exec("#{lttng_enable} lttng_ust_opencl_profiling:*") if profiling
+    exec("#{lttng_enable} lttng_ust_opencl_devices:*")
+    exec("#{lttng_enable} lttng_ust_opencl_arguments:*")
+    exec("#{lttng_enable} lttng_ust_opencl_build:infos*")
+  when 'default'
+    exec("#{lttng_enable} lttng_ust_opencl_profiling:*") if profiling
+    exec("#{lttng_enable} lttng_ust_opencl_devices:*")
+    exec("#{lttng_enable} lttng_ust_opencl_arguments:*")
+    exec("#{lttng_enable} lttng_ust_opencl_build:infos*")
+    # Wildcard using the * character are supported at the end of tracepoint names.
+    #   https://lttng.org/man/1/lttng-enable-event/v2.8/#doc-_understanding_event_rule_conditions
+    # Disable-event doesn't have wildcards
+    # So we enable and disable on the same line
+    opencl_disable = ['lttng_ust_opencl:clSetKernelArg*', 'lttng_ust_opencl:clGetKernelArg*',
+                      'lttng_ust_opencl:clSetKernelExecInfo*', 'lttng_ust_opencl:clGetKernelInfo*',
+                      'lttng_ust_opencl:clGetMemAllocInfoINTEL*']
+
+    exec("#{lttng_enable} lttng_ust_opencl:* -x #{opencl_disable.join(',')}")
+  when 'minimal'
+    LOGGER.debug("Tracing mode #{tracing_mode} not supported for OpenCL")
+  else
+    raise("Tracing mode #{tracing_mode} not supported")
+  end
+end
+
 def get_lttng_paths
   #  We launch one daemon per Node
   #  Hence the output need to be prefixed by hostname, so that each MPI local master will write into it
@@ -324,8 +382,15 @@ def setup_lttng(lttng_output, lttng_session_uuid, lttng_home)
   exec("lttng enable-channel --userspace --session=#{lttng_session_uuid} --blocking-timeout=inf #{channel_name}")
   exec("lttng add-context    --userspace --session=#{lttng_session_uuid} --channel=#{channel_name} -t vpid -t vtid")
 
-  enable_events_ze(lttng_session_uuid, channel_name, tracing_mode: OPTIONS[:tracing_mode],
-                                                     profiling: OPTIONS[:profile])
+  if OPTIONS[:'backend-name'].include?('ze')
+    enable_events_ze(lttng_session_uuid, channel_name, tracing_mode: OPTIONS[:tracing_mode],
+                                                       profiling: OPTIONS[:profile])
+  end
+  if OPTIONS[:'backend-name'].include?('cl')
+    enable_events_cl(lttng_session_uuid, channel_name, tracing_mode: OPTIONS[:tracing_mode],
+                                                       profiling: OPTIONS[:profile])
+  end
+
   exec("lttng start #{lttng_session_uuid}")
 end
 
@@ -382,31 +447,35 @@ end
 # TODO: Use babeltrace_thapi as a LIB not a binary
 def postprocess(folder, _options)
   return unless mpi_master?
+
   LOGGER.info { "postprocess #{folder}" }
   print("Trace Location #{folder}\n")
-  backend_level = OPTIONS[:backend]
-  backends = backend_level.map { |name_level| name_level.split(':').first }.join(',')
+  backends = OPTIONS[:'backend-name'].join(',')
+
+  backend_level = OPTIONS[:backend].filter { |nl| nl.include?(':') }.join(',')
 
   if OPTIONS.include?(:trace)
     opts = 'trace'
     opts << '--restrict '
     opts << '--context '
-    opts << "--backend #{backends.join(',')} " unless backends.empty?
+    opts << "--backend #{backends} " unless backends.empty?
   elsif OPTIONS.include?(:timeline)
     opts = 'timeline'
-    opts << "--backend #{backends.join(',')} " unless backends.empty?
+    opts << "--backend #{backends} " unless backends.empty?
   else
     opts = 'tally '
     opts << '--display_kernel_verbose ' if OPTIONS.include?(:'kernel-verbose')
     opts << '--display_metadata ' if OPTIONS.include?(:metadata)
     opts << "--display_name_max_size #{OPTIONS[:'max-name-size']} " if OPTIONS.include?(:'max-name-size')
     opts << '--display_mode json ' if OPTIONS.include?(:json)
-    opts << "--backend #{backends.join(',')} " unless backends.empty?
-    opts << "--backend_level #{backend_level.join(',')}" unless backend_level.empty?
+    opts << "--backend #{backends} " unless backends.empty?
+    opts << "--backend_level #{backend_level}" unless backend_level.empty?
     opts << '--display extended ' if OPTIONS.include?(:extended)
   end
 
-  IO.popen("#{BINDIR}/babeltrace_thapi #{opts} -- #{folder}") do |stdout, _stdin, _pid|
+  cmd = "#{BINDIR}/babeltrace_thapi #{opts} -- #{folder}"
+  LOGGER.debug(cmd)
+  IO.popen(cmd) do |stdout, _stdin, _pid|
     stdout.each { |line| print line }
   end
 end
@@ -423,8 +492,8 @@ parser = OptionParser.new
 # Tracing
 parser.on('-m', '--tracing-mode=MODE', %w[minimal default full], 'Define the category of events traced')
 parser.on('--traced-ranks=RANK', Array, 'Select with MPI rank will be traced.',
-          'Use -1 to mean all ranks.', 
-          'Default: -1') { |ranks| ranks.map(&:to_i)}
+          'Use -1 to mean all ranks.',
+          'Default: -1') { |ranks| ranks.map(&:to_i) }
 parser.on('--[no-]profile', 'Device activities will not profiled')
 
 # General Options
@@ -450,7 +519,8 @@ parser.on('--max-name-size SIZE',
 parser.on('--metadata', 'Display Trace Metadata')
 
 # backend default are hardcoded inside the cpp for now
-options = { tracing_mode: 'default', profile: true, backend: [], 'traced-ranks': [-1] }
+options = { tracing_mode: 'default', profile: true, backend: ['omp:2', 'cl:1', 'ze:1', 'cuda:1', 'hip:1'],
+            'traced-ranks': [-1] }
 
 def print_help_and_exit(parser)
   puts(parser.help)
@@ -473,6 +543,7 @@ rescue OptionParser::InvalidOption, OptionParser::MissingArgument => e
   print_help_and_exit(parser)
 end
 
+options[:'backend-name'] = options[:backend].map { |name_level| name_level.split(':').first }
 OPTIONS = options.freeze
 LOGGER.debug(OPTIONS)
 
